--- a/PR-4/views/add.ejs
+++ b/PR-4/views/add.ejs
@@ -26,6 +26,12 @@
             text-align:center;
             margin-left:  800px;
         }
+         .card h1 {
+            margin-bottom: 5px;
+        }
+         .card p {
+            margin-bottom: 15px;
+        }
         input,button{
             width:100%;
             padding:14px;
