admin panel session

--- a/Admin Panel With Session and category/views/profile/profilePage.ejs
+++ b/Admin Panel With Session and category/views/profile/profilePage.ejs
@@ -195,7 +195,7 @@
                                     <h5 class="fw-bold m-0 text-dark">
                                         <i class="mdi mdi-account-circle-outline me-2 text-primary"></i> Account Details
                                     </h5>
-                                    <a href="/editAdmin/<%= admin.id %>" class="btn edit-btn">
+                                    <a href="/admin/editAdmin/<%= admin.id %>" class="btn edit-btn">
                                         <i class="mdi mdi-account-edit-outline me-1"></i> Edit Profile
                                     </a>
                                 </div>
@@ -247,7 +247,7 @@
                                 </div>
 
                                 <div class="mt-5 pt-4 text-center border-top">
-                                    <a href="/changepassword"
+                                    <a href="/admin/change-password-page"
                                         class="text-secondary small fw-bold text-decoration-none hover-link">
                                         <i class="mdi mdi-lock-outline me-1"></i> Update Authentication Password
                                     </a>
