--- a/Admin Panel With Session/views/profile/profilePage.ejs
+++ b/Admin Panel With Session/views/profile/profilePage.ejs
@@ -247,7 +247,7 @@
                                 </div>
 
                                 <div class="mt-5 pt-4 text-center border-top">
-                                    <a href="/changepassword"
+                                    <a href="/change-password"
                                         class="text-secondary small fw-bold text-decoration-none hover-link">
                                         <i class="mdi mdi-lock-outline me-1"></i> Update Authentication Password
                                     </a>
